--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
+.container{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
 
-/* Your CSS Code here. */
+.green{
+	background-color: green;
+	height: 100px;
+	width: 100px;
+}
+
+.red{
+	background-color: red;
+	height: 100px;
+	width: 100px;
+}
+
+.blue{
+	background-color: blue;
+	height: 100px;
+	width: 100px;
+}
+
+.container div{
+	color: white;
+}
